--- a/index.html
+++ b/index.html
@@ -1,1 +1,180 @@
+portfolio/
+ ├─ index.html
+ ├─ style.css
+ ├─ script.js
+ ├─ music.mp3
+ └─ images/
+     ├─ bg.jpg
+     ├─ p1.jpg
+     ├─ p2.jpg
+     ├─ p3.jpg
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Puthin Thallapally</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+<!-- MUSIC -->
+<audio id="bgMusic" loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
+<button class="music-btn" onclick="playMusic()">🎵 Play Music</button>
+
+<!-- HERO -->
+<section class="hero">
+  <div class="overlay">
+    <h1 class="name">PUTHIN THALLAPALLY</h1>
+    <p class="tagline">Photographer / Cinematographer & Web / Creative Designer</p>
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section class="about">
+  <h2>About Me</h2>
+  <p>
+    I’m Puthin, a creative professional with a strong eye for detail and storytelling.
+    I specialize in web design, photography, and video editing, creating clean designs
+    and impactful visuals that leave a lasting impression.
+  </p>
+</section>
+
+<!-- SKILLS -->
+<section class="skills">
+  <h2>Skills</h2>
+  <div class="skill-buttons">
+    <a href="#" class="skill">Photography</a>
+    <a href="#" class="skill">Photo Editing</a>
+    <a href="#" class="skill">Web Designing</a>
+    <a href="#" class="skill">Video Editing</a>
+  </div>
+</section>
+
+<!-- PORTFOLIO -->
+<section class="portfolio">
+  <h2>Portfolio</h2>
+  <div class="gallery">
+    <img src="images/p1.jpg">
+    <img src="images/p2.jpg">
+    <img src="images/p3.jpg">
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section class="contact">
+  <h2>Contact</h2>
+  <p>Email: puthinthallapally@gmail.com</p>
+  <p>Phone: 9010744735</p>
+</section>
+
+<script src="script.js"></script>
+</body>
+</html>
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+}
+
+body {
+  background: #000;
+  color: #fff;
+}
+
+/* HERO */
+.hero {
+  height: 100vh;
+  background: url("images/bg.jpg") center/cover no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.overlay {
+  text-align: center;
+  animation: fadeUp 2s ease;
+}
+
+.name {
+  font-size: 60px;
+  font-weight: 800;
+  letter-spacing: 3px;
+}
+
+.tagline {
+  font-size: 20px;
+  opacity: 0.8;
+}
+
+/* SECTIONS */
+section {
+  padding: 80px 10%;
+}
+
+h2 {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+/* SKILLS */
+.skill-buttons {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.skill {
+  padding: 15px 30px;
+  border: 2px solid white;
+  text-decoration: none;
+  color: white;
+  transition: 0.4s;
+}
+
+.skill:hover {
+  background: white;
+  color: black;
+  transform: scale(1.1);
+}
+
+/* PORTFOLIO */
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+.gallery img {
+  width: 100%;
+  transition: 0.5s;
+}
+
+.gallery img:hover {
+  transform: scale(1.1);
+}
+
+/* MUSIC */
+.music-btn {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+/* ANIMATION */
+@keyframes fadeUp {
+  from {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+function playMusic() {
+  document.getElementById("bgMusic").play();
+}
