--- a/index.html
+++ b/index.html
@@ -8,3 +8,67 @@ portfolio/
      ├─ p1.jpg
      ├─ p2.jpg
      ├─ p3.jpg
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Puthin Thallapally</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<!-- MUSIC -->
+<audio id="bgMusic" loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
+<button class="music-btn" onclick="playMusic()">🎵 Play Music</button>
+
+<!-- HERO -->
+<section class="hero">
+  <div class="overlay">
+    <h1 class="name">PUTHIN THALLAPALLY</h1>
+    <p class="tagline">Photographer / Cinematographer & Web / Creative Designer</p>
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section class="about">
+  <h2>About Me</h2>
+  <p>
+    I’m Puthin, a creative professional with a strong eye for detail and storytelling.
+    I specialize in web design, photography, and video editing, creating clean designs
+    and impactful visuals that leave a lasting impression.
+  </p>
+</section>
+
+<!-- SKILLS -->
+<section class="skills">
+  <h2>Skills</h2>
+  <div class="skill-buttons">
+    <a href="#" class="skill">Photography</a>
+    <a href="#" class="skill">Photo Editing</a>
+    <a href="#" class="skill">Web Designing</a>
+    <a href="#" class="skill">Video Editing</a>
+  </div>
+</section>
+
+<!-- PORTFOLIO -->
+<section class="portfolio">
+  <h2>Portfolio</h2>
+  <div class="gallery">
+    <img src="images/p1.jpg">
+    <img src="images/p2.jpg">
+    <img src="images/p3.jpg">
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section class="contact">
+  <h2>Contact</h2>
+  <p>Email: puthinthallapally@gmail.com</p>
+  <p>Phone: 9010744735</p>
+</section>
+
+<script src="script.js"></script>
+</body>
+</html>
